feat: adiciona versão apenas com virtual thread e hibrida